# Web-Research

./: .env.example  .gitignore  .npmrc  AGENTS.md  PRD.md  README.md  RULES.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
apps/web/: middleware.ts  next.config.ts  package.json  tsconfig.json
database/docs/: mvp-schema.md
database/migrations/: 001_create_mvp_schema.sql  002_add_search_run_observability.sql  003_add_opportunities_business_status.sql  003_create_opportunities.sql  (+6 more)
docs/: auth-implementation-production-guide.md  frontend-opportunities.md
services/workers/: pyproject.toml
services/workers/src/contracts/: __init__.py  constants.py  models.py  validation.py
services/workers/src/ingestion/google_places/: __init__.py  adapter.py  client.py  errors.py  geocoding.py  quota.py
services/workers/src/normalization/: __init__.py  business.py  website_detection.py
services/workers/src/persistence/: __init__.py  businesses.py  dedup.py
services/workers/src/workers/: __init__.py  __main__.py  models.py  normalization.py  observability.py  pipeline.py  repository.py  website_detection.py
services/workers/src/workers/config/: __init__.py  settings.py
services/workers/tests/: test_business_dedup.py  test_business_upsert.py  test_contracts.py  test_google_clients.py  test_google_quota.py  test_normalization.py  test_pipeline.py  test_redaction.py  test_repository.py  test_settings.py  test_website_detection.py
services/workers/tests/fixtures/: google_geocoding_result.json  google_places_text_search.json
(+134 files in other folders)
