[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "business-lead-finder-workers"
version = "0.1.0"
description = "Python workers for Business Lead Finder ingestion pipeline."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.8,<3"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
